test/TestPhases/typechecker/invalid/addingNonNum.blc
module addingNonNum

function bla()
    var a: bool = true + true
end
